# ncnn

cmake/: ncnn_add_layer.cmake
src/: CMakeLists.txt  layer_declaration_install.h.in  net.h
src/layer/: CMakeLists.txt
