macro(ncnn_install_layer class)
    string(TOLOWER ${class} name)
    if(NCNN_INSTALL_SDK)
        install(FILES
            ${name}.h
            DESTINATION include/ncnn/layer
        )
    endif()
endmacro()

# layer implementation
ncnn_install_layer(AbsVal)
ncnn_install_layer(ArgMax OFF)
ncnn_install_layer(BatchNorm)
ncnn_install_layer(Bias)
ncnn_install_layer(BNLL)
ncnn_install_layer(Concat)
ncnn_install_layer(Convolution)
ncnn_install_layer(Crop)
ncnn_install_layer(Deconvolution)
ncnn_install_layer(Dropout)
ncnn_install_layer(Eltwise)
ncnn_install_layer(ELU)
ncnn_install_layer(Embed)
ncnn_install_layer(Exp)
ncnn_install_layer(Flatten)
ncnn_install_layer(InnerProduct)
ncnn_install_layer(Input)
ncnn_install_layer(Log)
ncnn_install_layer(LRN)
ncnn_install_layer(MemoryData)
ncnn_install_layer(MVN)
ncnn_install_layer(Pooling)
ncnn_install_layer(Power)
ncnn_install_layer(PReLU)
ncnn_install_layer(Proposal)
ncnn_install_layer(Reduction)
ncnn_install_layer(ReLU)
ncnn_install_layer(Reshape)
ncnn_install_layer(ROIPooling)
ncnn_install_layer(Scale)
ncnn_install_layer(Sigmoid)
ncnn_install_layer(Slice)
ncnn_install_layer(Softmax)
ncnn_install_layer(Split)
ncnn_install_layer(SPP OFF)
ncnn_install_layer(TanH)
ncnn_install_layer(Threshold)
ncnn_install_layer(Tile OFF)
ncnn_install_layer(RNN OFF)
ncnn_install_layer(LSTM)
ncnn_install_layer(BinaryOp)
ncnn_install_layer(UnaryOp)
ncnn_install_layer(ConvolutionDepthWise)
ncnn_install_layer(Padding)
ncnn_install_layer(Squeeze)
ncnn_install_layer(ExpandDims)
ncnn_install_layer(Normalize)
ncnn_install_layer(Permute)
ncnn_install_layer(PriorBox)
ncnn_install_layer(DetectionOutput)
ncnn_install_layer(Interp)
ncnn_install_layer(DeconvolutionDepthWise)
ncnn_install_layer(ShuffleChannel)
ncnn_install_layer(InstanceNorm)
ncnn_install_layer(Clip)
ncnn_install_layer(Reorg)
ncnn_install_layer(YoloDetectionOutput)
ncnn_install_layer(Quantize)
ncnn_install_layer(Dequantize)
ncnn_install_layer(Yolov3DetectionOutput)
ncnn_install_layer(PSROIPooling)
ncnn_install_layer(ROIAlign)
ncnn_install_layer(Packing)
ncnn_install_layer(Requantize)
ncnn_install_layer(Cast)
ncnn_install_layer(HardSigmoid)
ncnn_install_layer(SELU)
ncnn_install_layer(HardSwish)
ncnn_install_layer(Noop)
ncnn_install_layer(PixelShuffle)
ncnn_install_layer(DeepCopy)
ncnn_install_layer(Mish)
ncnn_install_layer(StatisticsPooling)
ncnn_install_layer(Swish)
ncnn_install_layer(Gemm)
ncnn_install_layer(GroupNorm)
ncnn_install_layer(LayerNorm)
ncnn_install_layer(Softplus)
